[✨ 개선] API 캐싱 처리 추가 (#53)
* fix: Elastic search 연결 실패 시, 예외 던지지 않고, 로그만 기록.

* feat: -parameters options 추가
- SpEL 사용을 위한 parameters 옵션 추가

* feat: 캐시 처리를 위한, 기본 설정 진행
- 기존 등록된 objectMapper 를 활용해서 Redis 전용 Mapper 생성 (Bean 등록 x)
- Cache Manager 등록 및 키 등록.
- 기본 TTL 은 30분
- SpEL 활용하여, 캐시 키 생성 로직 외부로 분리. (하드 코딩 삭제)

* fix: PageResponse 객체 역직렬화 가능하도록 수정
- 기존 : 모두 불변성을 가진 필드로 구성
- objectMapper 를 사용하여 redis 에서 역직렬화 진행 시, 기본 생성자 기반 혹은 setter 등을 사용하여 처리
- 따라서, 역직렬화가 가능하도록 @Jacksonized 를 추가하여, Builder 기반으로 진행하도록 구성
- 직렬/역직렬화 규칙으로 어짜피 is 때지는것 last 로 통일 처리

* feat: 포스트 글 목록 조회 캐싱 처리 진행

* feat: 글 생성 및 삭제 시, 캐시 초기화 추가 및 keyword 포함 시 캐싱 미처리 추가
- keyword 가 포함되어서 캐싱 될 경우, hit 확률이 낮은 너무 많은 데이터가 발생하게 되어 메모리 낭비가 심할 것으로 판단, 삭제 처리.
- key generate 로직, Objects util class 활용

* feat: 글 상세 조회 캐싱 처리
- 글 상세 조회 시, 캐시 추가
- 글 삭제 시, 해당 특정 캐시 초기화
- 이 때, 삭제 api 의 식별자가 id 로 되어있고, 조회시 slug 로 되어있어 매칭이 되지 않아 slug 로 통일화 진행. (API 스펙 변경)

* feat: 카테고리 조회 캐싱 처리 추가
- 기존 전역 ObjectMapper를 복사(copy)하여 사용하던 방식에서, Redis 전용 독립적인 ObjectMapper를 생성하도록 변경
- java.util', 'java.time', 패키지 내부 클래스('baekgwa.blogserver')로 화이트리스트 명시
-

* feat: 게시글 상세 조회 역직렬화 방법 변경
- @Jacksonized 사용해서 Builder 로 역직렬화 하도록 수정

* feat: 연관 글(동일 스택에 포함된 글 조회) 캐싱 처리